--- a/source/pc6001.vcxproj
+++ b/source/pc6001.vcxproj
@@ -11,22 +11,22 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{92DA9EA3-0183-40E3-9437-D178D3BDC3C5}</ProjectGuid>
+    <ProjectGuid>{D0694AEC-C06D-4F08-B240-7F228A26F0C7}</ProjectGuid>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v140_xp</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <UseOfMfc>false</UseOfMfc>
     <CharacterSet>MultiByte</CharacterSet>
     <WholeProgramOptimization>true</WholeProgramOptimization>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v140_xp</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <UseOfMfc>false</UseOfMfc>
-    <CharacterSet>Unicode</CharacterSet>
-    <WholeProgramOptimization>true</WholeProgramOptimization>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -41,7 +41,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
-    <_ProjectFileVersion>12.0.30501.0</_ProjectFileVersion>
+    <_ProjectFileVersion>14.0.23107.0</_ProjectFileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>.\Debug\</OutDir>
@@ -59,19 +59,19 @@
       <MkTypLibCompatible>true</MkTypLibCompatible>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <TargetEnvironment>Win32</TargetEnvironment>
-      <TypeLibraryName>.\Debug/fm7.tlb</TypeLibraryName>
+      <TypeLibraryName>.\Debug/pc6001.tlb</TypeLibraryName>
       <HeaderFileName />
     </Midl>
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_FM7;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_PC6001;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <PrecompiledHeaderOutputFile>.\Debug/fm77.pch</PrecompiledHeaderOutputFile>
-      <AssemblerListingLocation>.\csp-debug\fm77/</AssemblerListingLocation>
-      <ObjectFileName>.\csp-debug\fm77/</ObjectFileName>
-      <ProgramDataBaseFileName>.\csp-debug\fm77/</ProgramDataBaseFileName>
+      <PrecompiledHeaderOutputFile>.\Debug/pc6001.pch</PrecompiledHeaderOutputFile>
+      <AssemblerListingLocation>.\Debug/</AssemblerListingLocation>
+      <ObjectFileName>.\Debug/</ObjectFileName>
+      <ProgramDataBaseFileName>.\Debug/</ProgramDataBaseFileName>
       <BrowseInformation>true</BrowseInformation>
       <WarningLevel>Level3</WarningLevel>
       <SuppressStartupBanner>true</SuppressStartupBanner>
@@ -82,11 +82,11 @@
       <Culture>0x0411</Culture>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>odbc32.lib;odbccp32.lib;winmm.lib;dsound.lib;imm32.lib;vfw32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>.\Debug/fm77.exe</OutputFile>
+      <AdditionalDependencies>odbc32.lib;odbccp32.lib;winmm.lib;dsound.lib;imm32.lib;vfw32.lib;shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <OutputFile>.\Debug/pc6001.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <ProgramDatabaseFile>.\Debug/fm7.pdb</ProgramDatabaseFile>
+      <ProgramDatabaseFile>.\Debug/pc6001.pdb</ProgramDatabaseFile>
       <SubSystem>Windows</SubSystem>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
       <DataExecutionPrevention />
@@ -94,7 +94,7 @@
     </Link>
     <Bscmake>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <OutputFile>.\Debug/fm7.bsc</OutputFile>
+      <OutputFile>.\Debug/pc6001.bsc</OutputFile>
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -103,50 +103,41 @@
       <MkTypLibCompatible>true</MkTypLibCompatible>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <TargetEnvironment>Win32</TargetEnvironment>
-      <TypeLibraryName>.\Release/fm7.tlb</TypeLibraryName>
+      <TypeLibraryName>.\Release/pc6001.tlb</TypeLibraryName>
       <HeaderFileName />
     </Midl>
     <ClCompile>
-      <Optimization>Full</Optimization>
+      <Optimization>MaxSpeed</Optimization>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
-      <PreprocessorDefinitions>WIN32;NDEBUG;USE_DEBUGGER;_WINDOWS;FM77_EXRAM_BANKS=3;_FM77;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <StringPooling>false</StringPooling>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_PC6001;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <StringPooling>true</StringPooling>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <FunctionLevelLinking>true</FunctionLevelLinking>
-      <PrecompiledHeaderOutputFile>.\csp-release/fm77.pch</PrecompiledHeaderOutputFile>
-      <AssemblerListingLocation>.\csp-release\fm77/</AssemblerListingLocation>
-      <ObjectFileName>.\csp-release\fm77/</ObjectFileName>
-      <ProgramDataBaseFileName>.\csp-release\fm77/</ProgramDataBaseFileName>
+      <PrecompiledHeaderOutputFile>.\Release/pc6001.pch</PrecompiledHeaderOutputFile>
+      <AssemblerListingLocation>.\Release/</AssemblerListingLocation>
+      <ObjectFileName>.\Release/</ObjectFileName>
+      <ProgramDataBaseFileName>.\Release/</ProgramDataBaseFileName>
       <BrowseInformation>true</BrowseInformation>
       <WarningLevel>Level3</WarningLevel>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <AdditionalIncludeDirectories>C:\Program Files\Microsoft DirectX SDK %28June 2010%29\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <MultiProcessorCompilation>true</MultiProcessorCompilation>
-      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
-      <EnableFiberSafeOptimizations>true</EnableFiberSafeOptimizations>
-      <EnableParallelCodeGeneration>true</EnableParallelCodeGeneration>
-      <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
-      <IntrinsicFunctions>true</IntrinsicFunctions>
-      <BufferSecurityCheck>false</BufferSecurityCheck>
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <Culture>0x0409</Culture>
     </ResourceCompile>
     <Link>
-      <AdditionalDependencies>odbc32.lib;odbccp32.lib;winmm.lib;dsound.lib;imm32.lib;vfw32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>.\Release/fm77.exe</OutputFile>
+      <AdditionalDependencies>odbc32.lib;odbccp32.lib;winmm.lib;dsound.lib;imm32.lib;vfw32.lib;shlwapi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <OutputFile>.\Release/pc6001.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <ProgramDatabaseFile>.\Release/fm7.pdb</ProgramDatabaseFile>
+      <ProgramDatabaseFile>.\Release/pc6001.pdb</ProgramDatabaseFile>
       <SubSystem>Windows</SubSystem>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
       <DataExecutionPrevention />
       <TargetMachine>MachineX86</TargetMachine>
-      <AdditionalLibraryDirectories>C:\Program Files\Microsoft DirectX SDK %28June 2010%29\Lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <Bscmake>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <OutputFile>.\Release/fm7.bsc</OutputFile>
+      <OutputFile>.\Release/pc6001.bsc</OutputFile>
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -158,23 +149,26 @@
     <ClCompile Include="src\vm\datarec.cpp" />
     <ClCompile Include="src\vm\disk.cpp" />
     <ClCompile Include="src\vm\event.cpp" />
-    <ClCompile Include="src\vm\fm7\display.cpp" />
-    <ClCompile Include="src\vm\fm7\floppy.cpp" />
-    <ClCompile Include="src\vm\fm7\fm7.cpp" />
-    <ClCompile Include="src\vm\fm7\fm7_mainio.cpp" />
-    <ClCompile Include="src\vm\fm7\fm7_mainmem.cpp" />
-    <ClCompile Include="src\vm\fm7\joystick.cpp" />
-    <ClCompile Include="src\vm\fm7\kanjirom.cpp" />
-    <ClCompile Include="src\vm\fm7\keyboard.cpp" />
-    <ClCompile Include="src\vm\fm7\sound.cpp" />
+    <ClCompile Include="src\vm\fmgen\file.cpp" />
     <ClCompile Include="src\vm\fmgen\fmgen.cpp" />
     <ClCompile Include="src\vm\fmgen\fmtimer.cpp" />
     <ClCompile Include="src\vm\fmgen\opna.cpp" />
     <ClCompile Include="src\vm\fmgen\psg.cpp" />
-    <ClCompile Include="src\vm\mb8877.cpp" />
-    <ClCompile Include="src\vm\mc6809.cpp" />
-    <ClCompile Include="src\vm\memory.cpp" />
-    <ClCompile Include="src\vm\pcm1bit.cpp" />
+    <ClCompile Include="src\vm\i8255.cpp" />
+    <ClCompile Include="src\vm\io.cpp" />
+    <ClCompile Include="src\vm\mc6847.cpp" />
+    <ClCompile Include="src\vm\mcs48.cpp" />
+    <ClCompile Include="src\vm\pc6001\display.cpp" />
+    <ClCompile Include="src\vm\pc6001\joystick.cpp" />
+    <ClCompile Include="src\vm\pc6001\memory.cpp" />
+    <ClCompile Include="src\vm\pc6001\pc6001.cpp" />
+    <ClCompile Include="src\vm\pc6001\printer.cpp" />
+    <ClCompile Include="src\vm\pc6001\psub.cpp" />
+    <ClCompile Include="src\vm\pc6001\sub.cpp" />
+    <ClCompile Include="src\vm\pc6001\timer.cpp" />
+    <ClCompile Include="src\vm\pc6031.cpp" />
+    <ClCompile Include="src\vm\pc80s31k.cpp" />
+    <ClCompile Include="src\vm\upd765a.cpp" />
     <ClCompile Include="src\vm\ym2203.cpp" />
     <ClCompile Include="src\vm\z80.cpp" />
     <ClCompile Include="src\win32_debugger.cpp" />
@@ -189,21 +183,12 @@
     <ClInclude Include="src\emu.h" />
     <ClInclude Include="src\fifo.h" />
     <ClInclude Include="src\fileio.h" />
-    <ClInclude Include="src\res\machine_res.h" />
     <ClInclude Include="src\res\resource.h" />
     <ClInclude Include="src\vm\datarec.h" />
     <ClInclude Include="src\vm\debugger.h" />
     <ClInclude Include="src\vm\device.h" />
     <ClInclude Include="src\vm\disk.h" />
     <ClInclude Include="src\vm\event.h" />
-    <ClInclude Include="src\vm\fm7\fm7.h" />
-    <ClInclude Include="src\vm\fm7\fm7_common.h" />
-    <ClInclude Include="src\vm\fm7\fm7_dipsw.h" />
-    <ClInclude Include="src\vm\fm7\fm7_display.h" />
-    <ClInclude Include="src\vm\fm7\fm7_keyboard.h" />
-    <ClInclude Include="src\vm\fm7\fm7_mainio.h" />
-    <ClInclude Include="src\vm\fm7\fm7_mainmem.h" />
-    <ClInclude Include="src\vm\fm7\joystick.h" />
     <ClInclude Include="src\vm\fmgen\diag.h" />
     <ClInclude Include="src\vm\fmgen\file.h" />
     <ClInclude Include="src\vm\fmgen\fmgen.h" />
@@ -214,20 +199,33 @@
     <ClInclude Include="src\vm\fmgen\opna.h" />
     <ClInclude Include="src\vm\fmgen\psg.h" />
     <ClInclude Include="src\vm\fmgen\types.h" />
-    <ClInclude Include="src\vm\mb8877.h" />
-    <ClInclude Include="src\vm\mc6809.h" />
-    <ClInclude Include="src\vm\memory.h" />
-    <ClInclude Include="src\vm\pcm1bit.h" />
+    <ClInclude Include="src\vm\i8255.h" />
+    <ClInclude Include="src\vm\io.h" />
+    <ClInclude Include="src\vm\mc6847.h" />
+    <ClInclude Include="src\vm\mcs48.h" />
+    <ClInclude Include="src\vm\pc6001\display.h" />
+    <ClInclude Include="src\vm\pc6001\joystick.h" />
+    <ClInclude Include="src\vm\pc6001\memory.h" />
+    <ClInclude Include="src\vm\pc6001\pc6001.h" />
+    <ClInclude Include="src\vm\pc6001\printer.h" />
+    <ClInclude Include="src\vm\pc6001\psub.h" />
+    <ClInclude Include="src\vm\pc6001\sub.h" />
+    <ClInclude Include="src\vm\pc6001\timer.h" />
+    <ClInclude Include="src\vm\pc6031.h" />
+    <ClInclude Include="src\vm\pc80s31k.h" />
+    <ClInclude Include="src\vm\upd765a.h" />
     <ClInclude Include="src\vm\vm.h" />
     <ClInclude Include="src\vm\ym2203.h" />
     <ClInclude Include="src\vm\z80.h" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="src\res\fm77.rc" />
+    <Image Include="src\res\pc6001.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="FM77L2.ico" />
-    <Image Include="src\res\FM77L2.ico" />
+    <ResourceCompile Include="src\res\pc6001.rc">
+      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">src\res;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">src\res;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+    </ResourceCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
