[Build][CMAKE] Change some definitions.

--- a/source/build-cmake/pc8801ma/CMakeLists.txt
+++ b/source/build-cmake/pc8801ma/CMakeLists.txt
@@ -57,7 +57,7 @@ set(BUILD_PC8801MA ON CACHE BOOL "Build with PC8801MA")
 set(USE_OPNA ON CACHE BOOL "Use OPNA sound with PC8801MA")
 set(USE_PCG  ON CACHE BOOL "Use PCG8100")
 set(PC88_EXTRAM_PAGES  "4" CACHE STRING "Set banks of EXTRAM of PC8801, bank = 32Kbytes")
-set(USE_CMT_SOUND OFF CACHE BOOL "Sound with Data Recorder.")
+set(USE_CMT_SOUND ON CACHE BOOL "Sound with Data Recorder.")
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENCL ON CACHE BOOL "Build using OpenCL if enabled.")
 set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
